--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,38 +1,6 @@
-group 'com.jhomlala.better_player.better_player'
-version '1.0-SNAPSHOT'
-
-buildscript {
-    ext.exoPlayerVersion = "2.17.1"
-    ext.lifecycleVersion = "2.4.0-beta01"
-    ext.annotationVersion = "1.2.0"
-    ext.workVersion = "2.7.0"
-    ext.coreVersion = "1.6.0"
-    ext.gradleVersion = "7.0.2"
-    ext.kotlinVersion = "1.5.31"
-
-    repositories {
-        google()
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-    }
-}
-
-rootProject.allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
-
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-
 android {
     compileSdkVersion 31
+    namespace "com.jhomlala.better_player" // 👈 ADICIONE ESTA LINHA
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -64,8 +32,4 @@ android {
         implementation "androidx.annotation:annotation:$annotationVersion"
         implementation "androidx.work:work-runtime:$workVersion"
     }
-}
-
-dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
 }
